Rest: Add un-/supported providers and layers to Node
Amended by Gabor:
Added changelog and incremented version in docs/rest_v1_openapi.yaml
